<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:padding="@dimen/padding_regular"
        android:textSize="@dimen/text_heading"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_dessert"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/text1"/>

    <ImageView
        android:id="@+id/donut"
        android:layout_width="200sp"
        android:layout_height="210sp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/text2"
        android:contentDescription="@string/donuts"
        android:src="@drawable/donut_circle"
        android:onClick="showDonutOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/text2"
        android:layout_toRightOf="@id/donut"
        android:text="@string/donuts" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="200sp"
        android:layout_height="210sp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/donut"
        android:contentDescription="@string/ice_cream"
        android:src="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:text="@string/ice_cream" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="200sp"
        android:layout_height="210sp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/ice_cream"
        android:contentDescription="@string/froyo_description"
        android:src="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:text="@string/froyo_description" />

</RelativeLayout>